[package]
name = "display-hat-mini-node"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-hat-mini-driver = { git = "https://github.com/niofis/display-hat-min-driver" }
lazy_static = "1.4"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
